<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.john.medicineapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:id="@+id/Name"/>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ADD"
        android:id="@+id/AddButton"
        android:layout_below="@+id/Name"
        android:text="@string/AddTitle"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="DELETE"
        android:id="@+id/DeleteButton"
        android:text="@string/DeleteTitle"
        android:layout_below="@+id/AddButton"
        android:layout_centerHorizontal="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/DeleteButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/ScrollMeds">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/MedicineList" />

    </ScrollView>


</RelativeLayout>